fix issue uncovered on Heroku

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -99,6 +99,10 @@ a {
   padding-left:1em;
 }
 
+.list span {
+  display: block;
+}
+
 .list a:hover {
   color: #af7fcc;
 }
